force-app/main/default/objects/Comparable_Opportunity__c/Comparable_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Comparable Opportunity</label>
    <nameField>
        <displayFormat>CompOpp-{0000}</displayFormat>
        <label>Comparable Opportunity #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comparable Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>