force-app/main/default/objects/Comparable_Opportunity__c/fields/Base_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Base_Opportunity__c</fullName>
    <description>Main Opportunity that this Comparable belongs to</description>
    <label>Base Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comparable Opportunities</relationshipLabel>
    <relationshipName>Comparable_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>