force-app/main/default/objects/Comparable_Opportunity__c/fields/Comparable_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity that is similar to this Comparable&apos;s main opportunity</description>
    <label>Comparable Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comparable Opportunities (Comparable Opportunity)</relationshipLabel>
    <relationshipName>Comparable_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>