force-app/main/default/objects/Comparable_Opportunity__c/fields/Comparable_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Opportunity_Amount__c</fullName>
    <formula>Comparable_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comparable Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>