force-app/main/default/objects/Comparable_Opportunity__c/fields/Comparable_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Opportunity_Name__c</fullName>
    <formula>Comparable_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comparable Opportunity Name</label>
    <type>Text</type>
</CustomField>